just fixing the things that bug on mobile

--- a/style.css
+++ b/style.css
@@ -323,10 +323,6 @@ footer {
 
 /*MEDIA QUERIES*/
 @media (max-width: 400px) {
-  #about {
-    animation: UpFade 6s ease calc(var(--typingSpeed) + 2) forwards;
-  }
-
   .homenav {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
